// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateLine renders with custom color 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  color: #535353;
}

<time
    class="emotion-0"
    datetime="Mock Date"
  >
    Mock Date
  </time>
</DocumentFragment>
`;

exports[`DateLine renders with fallback formatting 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
}

<time
    class="emotion-0"
    datetime="Mock Date"
  >
    Mock Date
  </time>
</DocumentFragment>
`;

exports[`DateLine renders with provided date, format, prefix and suffix 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
}

<time
    class="emotion-0"
    datetime="Mock Date"
  >
    Updated: Mock Date, The Times
  </time>
</DocumentFragment>
`;
